--- a/index.html
+++ b/index.html
@@ -10,7 +10,42 @@
 </head>
 <body>
 <h1>On Screen calculator</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab libero, cupiditate veniam officiis itaque in porro iure fugit iusto reprehenderit commodi earum cum blanditiis quos error similique quod, facere! Hic.</p>
+<div id="calWrap">
+  <div id="screen"></div>
+  <table>
+      <tr>
+        <td><button id="AC">AC</button></td>
+        <td><button id="L">L</button></td>
+        <td><button class="percent">%</button></td>
+        <td><button id="divide">÷</button></td>
+      </tr>
+      <tr>
+        <td><button value="7" class="numbers">7</button></td>
+        <td><button value="8" class="numbers">8</button></td>
+        <td><button value="9" class="numbers">9</button></td>
+        <td><button id="times">x</button></td>
+      </tr>
+      <tr>
+        <td><button value="4" class="numbers">4</button></td>
+        <td><button value="5" class="numbers">5</button></td>
+        <td><button value="6" class="numbers">6</button></td>
+        <td><button id="minus"> - </button></td>
+      </tr>
+      <tr>
+        <td><button value="1" class="numbers">1</button></td>
+        <td><button value="2" class="numbers">2</button></td>
+        <td><button value="3" class="numbers">3</button></td>
+        <td><button id="add">+</button></td>
+      </tr>
+      <tr>
+        <td><button value="0" class="numbers">0</button></td>
+        <td><button value="." class="numbers">.</button></td>
+        <td><button class="percent">%</button></td>
+        <td><button id="equalTo">=</button></td>
+      </tr>
+  </table>
+    
+</div>
   
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
