show current input after press operators

--- a/index.html
+++ b/index.html
@@ -44,9 +44,50 @@
         <td><button id="equalTo">=</button></td>
       </tr>
   </table>
-    
+
 </div>
-  
+
+
+<div class="ads-aside-left">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- Lower-mid-page -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-7524918595198419"
+             data-ad-slot="5299618488"
+             data-ad-format="auto"></ins>
+        <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+</div>
+
+<div class="ads-aside-right">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- Lower-mid-page -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-7524918595198419"
+             data-ad-slot="5299618488"
+             data-ad-format="auto"></ins>
+        <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+</div>
+
+
+<div class="google-ads-bottom">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- Lower-mid-page -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-7524918595198419"
+             data-ad-slot="5299618488"
+             data-ad-format="auto"></ins>
+        <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+</div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 <script src="js/script.js"></script>
