--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
         <td><button id="AC">AC</button></td>
         <td><button id="L">L</button></td>
         <td><button class="percent">%</button></td>
-        <td><button id="divide">÷</button></td>
+        <td><button class='operater' value="divide">÷</button></td>
       </tr>
       <tr>
         <td><button value="7" class="numbers">7</button></td>
         <td><button value="8" class="numbers">8</button></td>
         <td><button value="9" class="numbers">9</button></td>
-        <td><button id="times">x</button></td>
+        <td><button class='operater' value="times">x</button></td>
       </tr>
       <tr>
         <td><button value="4" class="numbers">4</button></td>
         <td><button value="5" class="numbers">5</button></td>
         <td><button value="6" class="numbers">6</button></td>
-        <td><button id="minus"> - </button></td>
+        <td><button class='operater' value="minus"> - </button></td>
       </tr>
       <tr>
         <td><button value="1" class="numbers">1</button></td>
         <td><button value="2" class="numbers">2</button></td>
         <td><button value="3" class="numbers">3</button></td>
-        <td><button id="add">+</button></td>
+        <td><button class='operater' value="add">+</button></td>
       </tr>
       <tr>
         <td><button value="0" class="numbers">0</button></td>
