show 0 on init screen

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <h1>On Screen calculator</h1>
 <div id="calWrap">
-  <div id="screen"></div>
+  <div id="screen">0</div>
   <table>
       <tr>
         <td><button id="AC">AC</button></td>
